Внесены изменения в стили

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 </div>
 
                 <div class="phone-icon__wrapper">
-                    <img class="phone-icon" src="img/Phone.svg" alt="Иконка телефона">
+                    <button class="phone-button" href="#">
+                        <img class="phone-icon" src="img/Phone.svg" alt="Иконка телефона">
+                    </button>
                 </div>
             </div>
         </div>
@@ -103,7 +105,9 @@
                     </div>
     
                     <div class="phone-icon__wrapper">
-                        <img class="phone-icon" src="img/Phone.svg" alt="Иконка телефона">
+                        <button class="phone-button" href="#">
+                            <img class="phone-icon" src="img/Phone.svg" alt="Иконка телефона">
+                        </button>
                     </div>
                 </div>
             </div>
