Внесены изменения в код

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <title>Adaptation</title>
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -18,7 +20,7 @@
                 </div>
 
                 <div class="phone-icon__wrapper header__phone-icon">
-                    <button class="phone-button" href="#">
+                    <button class="phone-button" type="submit">
                         <img class="phone-icon" src="img/Phone.svg" alt="Иконка телефона">
                     </button>
                 </div>
@@ -105,7 +107,7 @@
                     </div>
     
                     <div class="phone-icon__wrapper footer__phone-icon">
-                        <button class="phone-button" href="#">
+                        <button class="phone-button" type="submit">
                             <img class="phone-icon" src="img/Phone.svg" alt="Иконка телефона">
                         </button>
                     </div>
@@ -121,4 +123,5 @@
         </div>
     </footer>
 </body>
+
 </html>
