Сделан пиксель перфект

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                         <input class="client-contact__input client-contact__name" type="text" name="name" placeholder="Ваше имя" required>
                         <input class="client-contact__input client-contact__phone" type="tel" name="tel" placeholder="Телефон" required>
                         <input class="client-contact__input client-contact__email" type="email" name="email" placeholder="E-mail" required>
-                        <button class="client-contact__button" type="submit">Позвоните мне</button>
+                        <button class="client-contact__button" type="submit">позвоните мне</button>
                     </form>
 
-                    <p class="client-contact__agreement">Я даю своё <a class="client-contact__link" href="#">согласие</a> на обработку моих персональных данных</p>
+                    <p class="client-contact__agreement">Я даю своё <a class="client-contact__link" href="#">согласие</a> на обработку моих персональных данных.</p>
                 </div>
             </section>
     </main>
@@ -150,7 +150,7 @@
                         <span class="footer__copyrights">© 2022 XXXcompany. Все права защищены.</span>
                     </div>
     
-                    <span class="footer__developer footer__developer_container_1200px">Сделано <span class="footer__developer-text_container_1024px">в </span> Ивановым Иваном</span>
+                    <span class="footer__developer footer__developer_container_1200px">Сделано <span class="footer__developer-text_container_1024px">в </span>Ивановым Иваном</span>
     
                     <div class="contacts footer__contacts">
                         <a class="contacts__phone" href="tel:89625561234">+7&nbsp;(962)&nbsp;556&nbsp;-&nbsp;1234</a>
